# psg-hackathon

./: .env.example  .gitignore  README.md  TESTCASE.md  main.py  presentation_demo.md  pyproject.toml
.github/skills/devhub-module-builder/: SKILL.md
Docs/: AGENT_DESIGN.md  API_SPEC.md  ARCHITECTURE.md  BUILD_PROMPTS.md  DEVOPS_PLAN.md  ENGINEERING_PRINCIPLES.md  FEATURES_V1.md  OOP_BACKEND-BLUEPRINT.md  Project_Idea.md  README.md  ROADMAP.md  SKILLS.md  TECH_STACK.md
clara/: __init__.py  demo.py  requirements.txt
clara/client/: __init__.py  cli.py  commands.py  ui.py  websocket_client.py
clara/config/: logging.py  settings.py
clara/database/: db.py  models.py
clara/database/migrations/: 001_initial.sql
clara/docker/: Dockerfile  docker-compose.yml
clara/scripts/: deploy_vps.sh  start_server.sh
clara/server/: __init__.py  ai_gateway.py  auth.py  files.py  main.py  messaging.py  moderation.py  presence.py  protocol.py  rooms.py  voice.py  websocket.py
clara/tests/: __init__.py  e2e_tests.py
devhub/: __init__.py  main.py  router.py  shell.py
devhub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
devhub/modules/: base.py
devhub/modules/aaru/: module.py
devhub/modules/clara/: __main__.py  ai.py  ai_gateway.py  cli.py  database.py  file_service.py  module.py  protocol.py  voice.py
devhub/modules/launcher/: module.py
devhub/modules/memo/: module.py
devhub/networking/: protocol.py  tcp_transport.py
devhub/services/: git_service.py  launcher.py  memo_repo.py  security_service.py
devhub/storage/: config.py  paths.py
(+4 files in other folders)
