[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devhub"
version = "0.1.0"
description = "DevHub — Terminal Developer Worksuite"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Aarush"},
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "wsproto>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
security = [
    "bandit>=1.7",
    "pip-audit>=2.6",
]
voice = [
    "aiortc>=1.6",
]

[project.scripts]
devhub = "devhub.main:app"
clara = "devhub.modules.clara.cli:app"
clara-server = "devhub.modules.clara.server.app:run_server"

[tool.setuptools.packages.find]
include = ["devhub*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
